--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "sloth-ts",
+  "name": "sloth_denver",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3306",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3306",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "next": "13.2.1",
+    "@fuel-wallet/sdk": "^0.5.1",
+    "@next/font": "13.1.6",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "antd": "^5.1.7",
+    "csstype": "^3.1.1",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "fuels": "^0.31.0",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "web3": "^1.8.2",
+    "zustand": "^4.3.2"
   },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SlothDenver/sloth-ts.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SlothDenver/sloth-ts/issues"
-  },
-  "homepage": "https://github.com/SlothDenver/sloth-ts#readme"
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
+  }
 }
