--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,7 @@ dist
 # misc
 .DS_Store
 .env.local
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
 
