--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3306",
+    "dev": "next dev -p 80",
     "build": "next build",
-    "start": "next start -p 3306",
+    "start": "next start -p 80",
     "lint": "next lint"
   },
   "dependencies": {
-    "@fuel-wallet/sdk": "^0.5.1",
+    "@ethersproject/providers": "^5.7.2",
+    "@fuel-wallet/sdk": "^0.7.0",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -21,7 +22,8 @@
     "csstype": "^3.1.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "fuels": "^0.31.0",
+    "ethers": "^5.7.2",
+    "fuels": "^0.30.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
